--- a/templates/counselor/counselor_home.html
+++ b/templates/counselor/counselor_home.html
@@ -575,9 +575,8 @@ th, td {
              
 
                 <div>
-                {% for object in form %} 
-                              <p style="font-weight: bold;"> {{object.firstname }} {{object.lastname }} </p>
-                                   {% endfor %} 
+                              <p style="font-weight: bold;"> {{form.firstname }} {{form.lastname }} </p>
+                                
                                    </div>
               </div>
         </header>
