--- a/templates/counselor/feedback.html
+++ b/templates/counselor/feedback.html
@@ -137,6 +137,32 @@ margin-bottom:15px;
 .buttons:hover .text {
   background-image: linear-gradient(-45deg, #4863A0, #98b4ac);
 }
+.fac{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonF {
+  padding: 18px;
+width: 420px;
+height: 55px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
   </style>
   
 <!-- 
@@ -158,10 +184,12 @@ margin-bottom:15px;
   <form action="#" class="cleanForm" method="POST">
 
 
-  
-    {% for message in messages %}
-    <center> <p style=" margin-left: auto;"><b>{{message}} !</b></p> </center>
-{% endfor %}
+    <div class="fac">
+          {% for message in messages %}
+     <p class="buttonF">{{message}} !</p>
+     {% endfor %}
+    </div>
+
         <div class="column">
           <div class="row">     
             <p class="pText"><b class="bText">Date Referred: &nbsp;</b> {{info.created_at}}</p> 
