--- a/templates/counselor/modalC.html
+++ b/templates/counselor/modalC.html
@@ -258,16 +258,38 @@
 .buttons:hover .text {
   background-image: linear-gradient(-45deg, #4863A0, #98b4ac);
 }
-  </style>
+.fac{
 
+display: flex;
+align-items: center;
+justify-content: center;
 
+}
+
+.buttonF {
+width: 420px;
+height: 55px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
+
+</style>
 {% for object in objects %}
-     
-                                        <div class="table-row table-head">
-      <div class="table-cell first-cell">
-          <p class="listTitle">Students Referral Information</p>
-      </div>
-  </div>  
+  <div class="fac">
+    <button type="submit" class="buttonF">Students Referral Information</button>
+  </div> 
+
   <br>
   <div id="wrapper">
     <div id="square">
@@ -296,7 +318,7 @@
         <div  class="table-cell">
 
       <p class="modal1"><b>Behavior Problem:</b> &nbsp;</p>
-      <p class="modal1"><b>Subject:</b> &nbsp; &nbsp;</p>
+      <!-- <p class="modal1"><b>Subject:</b> &nbsp; &nbsp;</p> -->
       <p class="modal1"><b>Reasons:</b> &nbsp; &nbsp;</p>
       <p class="modal1"><b>Start Session:</b> &nbsp; &nbsp;</p>
       <p class="modal1"><b>End Session:</b> &nbsp; &nbsp;</p>
@@ -305,7 +327,7 @@
             <div class="table-cell">
 
       <p class="modal2"> &nbsp; &nbsp; {{object.behavior_problem | title}}</p>
-      <p class="modal2" > &nbsp; &nbsp; {{object.subject_referred}}</p> 
+      <!-- <p class="modal2" > &nbsp; &nbsp; {{object.subject_referred}}</p>  -->
       <p class="modal2" > &nbsp; &nbsp; {{object.reasons}}</p>
       <p class="modal2" > &nbsp; &nbsp; {{object.start_time}}</p>
       <p class="modal2" > &nbsp; &nbsp; {{object.end_time}}</p>
@@ -328,3 +350,6 @@
      
                
 {% endblock %}
+
+
+    
