--- a/templates/counselor/schedule.html
+++ b/templates/counselor/schedule.html
@@ -146,9 +146,43 @@ td.text-center {
 td.text-right {
   text-align: right;
 }
+.fac{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonF {
+width: 350px;
+height: 45px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
 
   </style>
   <br>
+  <a style="color: #504A4B" 
+  href="{% url 'counselor_view_another_sched' 1 %}"> 
+           <div class="fac">
+          <button type="submit" class="buttonF">Click here to view next day</button>
+        </div> 
+</a> 
+ 
+   <br> <br>
+  <!-- //KANI WALAPA -->
 
     <table class="table-fill">
     <thead style="height: 20px;">
