--- a/templates/student/notif_detail.html
+++ b/templates/student/notif_detail.html
@@ -131,14 +131,38 @@ Notification_Detail
     text-align: left;
     /* line-height: 25px; */
   }
-  </style>
+  .fac{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonF {
+width: 420px;
+height: 55px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
+
+</style>
 
 
-<div class="table-row table-head" style="margin:auto;">
-    <div class="table-cell first-cell">
-        <p class="listTitle">Full Details</p>
-    </div>
-</div>
+        <div class="fac">
+          <button type="submit" class="buttonF">Full Details</button>
+        </div> 
 <br>
             <div class="container">
 {% for object in object_list %}
