--- a/templates/student/schedule.html
+++ b/templates/student/schedule.html
@@ -111,6 +111,7 @@ margin-bottom:15px;
     color: #000;
 }
 .buttons{
+  margin-left: auto;
   width: 200px;
   height: auto;
   border: 5em;
@@ -199,17 +200,97 @@ p{
     font-size: 11px;
   }
 }
-  </style>
+.fac{
 
-                                           <div class="table-row table-head">
-      <div class="table-cell first-cell">
-          <p class="listTitle">SCHEDULE INFORMATION</p>
-      </div>
-  </div>  
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonF {
+  margin: 0;
+width: 420px;
+height: 55px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
+.fac{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonF {
+  padding: 13px;
+width: 445px;
+height: 45px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+margin: auto;
+}
+.facers{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonFed {
+  padding: 13px;
+width: 435px;
+height: 40px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+margin-right: auto;
+}
+</style>
+  <div class="fac">
+    <button type="submit" class="buttonF">Set Schedule</button>
+  </div> 
+&nbsp;
 <form action="#" class="cleanForm" method="POST">
-  {% for message in messages %}
-  <center> <p style=" margin-left: auto;"><b>{{message}} !</b></p> </center>
-{% endfor %}
+        <div class="facers">
+          {% for message in messages %}
+     <p class="buttonFed">{{message}} !</p>
+     {% endfor %}
+    </div>
      
         <div class="row">     
           <p class="pText"><b class="bText">Student Number: &nbsp;</b>  {{schedform.studnumber}}</p> 
@@ -231,6 +312,7 @@ p{
 
       
   </form>
+  <br>
      <br>  
 
    
