--- a/templates/student/student_home.html
+++ b/templates/student/student_home.html
@@ -398,7 +398,7 @@ img {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 98%;
-  height: 580px;
+  height: 660px;
   border-radius: 5px;
   background-color: var(--container-color); 
   float: center;
@@ -607,13 +607,13 @@ th, td {
                           </a>
 
                             <a href="{% url 'student_schedule' %}" class="nav__link">
-                                <i class='bx bx-navigation nav__icon' ></i>
+                                <i class='bx bx-calendar-check nav__icon' ></i>
                                 <span class="nav__name">Set Schedule</span>
                             </a>
                            
 
                             <a href="{% url 'view_schedule_student' %}" class="nav__link "> 
-                              <i class='bx bx-user nav__icon' ></i>
+                              <i class='bx bx-calendar nav__icon' ></i>
                               <span class="nav__name">View Schedule</span>
                               
                           </a>
