--- a/templates/student/viewappointment.html
+++ b/templates/student/viewappointment.html
@@ -40,7 +40,7 @@ Schedule
       background-color: #B4CFEC;
       box-shadow:
         0 9px 33px rgba(0, 0, 0, 0.07);
-        min-width: 800px;
+        min-width: 700px;
   height: 350px;
   float: center;
   margin: auto;
@@ -207,13 +207,37 @@ p{
     font-size: 11px;
   }
 }
+.fac{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonF {
+width: 420px;
+height: 55px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
+
 </style>
-                                           <div class="table-row table-head">
-      <div class="table-cell first-cell">
-          <p class="listTitle">SCHEDULE INFORMATION</p>
-      </div>
-  </div>  
-  <br>
+  <div class="fac">
+    <button type="submit" class="buttonF">Schedule Information</button>
+  </div> 
+&nbsp;
 <div id="wrapper">
    
     <div id="square">
@@ -225,6 +249,7 @@ p{
          <p style="padding: 10px; font-size: 17px;"><b>Students Name:&nbsp;</b> {{object.lastname}}, {{object.firstname}}</p>
          <p style="line-height: 1px; font-size: 17px;"><b>ID Number:&nbsp;</b>{{object.studnumber}}</p>
     </div>
+
   
     <div id="box">
   
