--- a/templates/teacher/list_students.html
+++ b/templates/teacher/list_students.html
@@ -191,14 +191,36 @@ p{
     line-height: 5px;
     
 }
+.fac{
 
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonF {
+width: 450px;
+height: 55px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
 
 </style>
-                      <div class="table-row table-head">
-            <div class="table-cell first-cell">
-                <p class="listTitle">List of Students</p>
-            </div>
-        </div>
+    <div class="fac">
+    <button type="submit" class="buttonF">List of Students</button>
+  </div> 
             {% if not object_list %}
             <br>
             No Enrolled Students Yet!
