--- a/templates/teacher/modal.html
+++ b/templates/teacher/modal.html
@@ -162,18 +162,41 @@
     #index-gallery{
       width:465px;
     }
+    .fac{
+
+display: flex;
+align-items: center;
+justify-content: center;
+padding: 5px;
+}
+
+.buttonF {
+width: 420px;
+height: 55px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
+
     </style>
  {% if not object_list %}
                       No Referred Students yet!
                   {% endif %}
 
               {% for object in object_list  reversed %}
-           
-                                              <div class="table-row table-head">
-            <div class="table-cell first-cell">
-                <p class="listTitle">Students Referral Information</p>
-            </div>
-        </div>  
+        <div class="fac">
+          <button type="submit" class="buttonF">Students Referral Information</button>
+        </div> 
         <br>
         <div id="wrapper">
             <div id="square">
