--- a/templates/teacher/notification.html
+++ b/templates/teacher/notification.html
@@ -159,13 +159,39 @@ p{
       background-color: #E3E4FA;
       color: white;
     }
+    .fac{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonF {
+width: 420px;
+height: 55px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
+
 </style>
 
-<div class="table-row table-head">
-  <div class="table-cell first-cell">
-      <p class="listTitle">Notifications</p>
-  </div>
-</div>
+
+        <div class="fac">
+          <button type="submit" class="buttonF">Notifications</button>
+        </div> 
+
 <br>
 
     {% if not notifications %}
@@ -206,3 +232,7 @@ p{
  
    
 {% endblock %}
+
+
+
+<!-- MAO JUD NI FINAAAAAAAAAAAAAL -->
