--- a/templates/teacher/teacher_home.html
+++ b/templates/teacher/teacher_home.html
@@ -364,7 +364,7 @@ img {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 102%;
-  height: 800px;
+  height: 840px;
   border-radius: 5px;
   background-color: var(--card-color); 
   float: center;
@@ -678,6 +678,32 @@ p{
     font-size: 11px;
   }
 }
+.fac{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonF {
+width: 420px;
+height: 55px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
+
   </style>
 
     </head>
@@ -718,7 +744,7 @@ p{
                           </a>
                             
                               <a href="{% url 'teacher_view_referred_students' %}" class="nav__link">
-                                  <i class='bx bx-navigation nav__icon' ></i>
+                                  <i class='bx bx-user-pin nav__icon' ></i>
                                   <span class="nav__name">View Referred Student</span>
                                   <i class='bx bx-chevron-down nav__icon nav__dropdown-icon'></i>
                               </a>
@@ -736,29 +762,12 @@ p{
                   {% block content %} 
                
                  
-                      <div class="table-row table-head">
-            <div class="table-cell first-cell">
-                <p class="listTitle">My Subjects</p>
-            </div>
-        </div>
+                  <div class="fac">
+                    <button type="submit" class="buttonF">My Subjects</button>
+                  </div> 
+              
 
-      <!-- <form method="POST" action="">
-				{% csrf_token %}
-            <div class="header__search">
-         <input type="search" name="search" placeholder="Search" class="header__input">
-        <i class='bx bx-search header__icon'></i>
-     </div> -->
-
-     <!-- <div class="header__toggle">
-         <i class='bx bx-menu' id="header-toggle"></i>
-     </div> -->
-
-       <!-- {% for message in messages %}
-					   <center> <p>{{message}}</p> </center>
-				   {% endfor %}
-      </form>  -->
       <br>
-      <!-- <div class="container"> -->
       <div class="cards" >
 
                   {% for object in object_list%}
