--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -456,7 +456,48 @@ img {
     
                     <div class="nav__list">
                         <div class="nav__items">
-                           <a href="{% url 'upload_faculty' %}" class="nav__link">
+                         
+                            <a href="{% url 'uploaddb_schooloffices' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload School Offices</span>
+                            </a>
+
+                            <a href="{% url 'uploaddb_department' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload Department</span>
+                            </a>
+
+                            <a href="{% url 'uploaddb_degreeprogram' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload Degree Program</span>
+                            </a>
+
+                        
+                         
+                            <a href="{% url 'uploaddb_allfaculty' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload All Faculty</span>
+                            </a>
+                             <a href="{% url 'uploaddb_offercode' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload Offer Code</span>
+                            </a>
+                            <a href="{% url 'uploaddb_allsubjects' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload All Subjects</span>
+                            </a>
+                             <a href="{% url 'uploaddb_semester' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload Semester</span>
+                            </a>
+
+
+
+                              <a href="{% url 'uploaddb_counselor' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload Counselor</span>
+                            </a>
+                              <a href="{% url 'upload_faculty' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
                                 <span class="nav__name">Upload Faculty</span>
                             </a>
@@ -476,7 +517,7 @@ img {
 
                              <a href="{% url 'admin_offering' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Offerings</span>
+                                <span class="nav__name"> View Offerings</span>
                             </a>
 
 
