--- a/templates/admin/uploaddb_degreeprogram.html
+++ b/templates/admin/uploaddb_degreeprogram.html
@@ -1,7 +1,6 @@
-{% extends "uploaddb/uploaddb_home.html" %}
-{% block title %} Upload Department {% endblock %}
+{% extends "admin/admin_home.html" %}
+{% block title %} Upload Degree Program {% endblock %}
 {% block content %}
- 
 <style>
 .faculty{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -76,7 +75,7 @@
 </style>
 <div class="faculty">
   <div class="fac">
-    <button type="submit" class="buttonF">Upload Department</button>
+    <button type="submit" class="buttonF">Upload Degree Progran</button>
   </div> 
 <br>
   <form method="post" enctype="multipart/form-data">
