--- a/templates/admin/uploaddb_department.html
+++ b/templates/admin/uploaddb_department.html
@@ -1,5 +1,5 @@
-{% extends "uploaddb/uploaddb_home.html" %}
-{% block title %} Upload All Subjects {% endblock %}
+{% extends "admin/admin_home.html" %}
+{% block title %} Upload Department {% endblock %}
 {% block content %}
  
 <style>
@@ -76,7 +76,7 @@
 </style>
 <div class="faculty">
   <div class="fac">
-    <button type="submit" class="buttonF">Upload All Subject</button>
+    <button type="submit" class="buttonF">Upload Department</button>
   </div> 
 <br>
   <form method="post" enctype="multipart/form-data">
