--- a/templates/admin/uploaddb_semester.html
+++ b/templates/admin/uploaddb_semester.html
@@ -1,4 +1,4 @@
-{% extends "uploaddb/uploaddb_home.html" %}
+{% extends "admin/admin_home.html" %}
 {% block title %} Upload Semester {% endblock %}
 {% block content %}
  
