--- a/templates/counselor/referred_students.html
+++ b/templates/counselor/referred_students.html
@@ -241,7 +241,7 @@ outline: none;
 </thead>
 <br>
 
-{% for object in objects %}
+{% for object in objects reversed %}
 
 <tbody>
 <tr>
@@ -249,7 +249,7 @@ outline: none;
 <td data-label="Name"> {{object.lastname}}, &nbsp; {{object.firstname}}</td>
 <td data-label="Date"><a>{{object.date}}</a></td>
 <td data-label="Status"><a>{{object.status|title}}</a></td>
-<td style="color: black;" ><a href="{% url 'counselor_view_detail_referred_students' object.id %}" style="font-weight: 550; color: black;">View More Information</a></td>
+<td style="color: black;" ><a href="{% url 'counselor_view_detail_referred_students' object.id 'finish' %}" style="font-weight: 550; color: black;">View More Information</a></td>
 
 </tr>
 </tbody>
