--- a/templates/counselor/schedule.html
+++ b/templates/counselor/schedule.html
@@ -180,7 +180,8 @@ outline: none;
           <button type="submit" class="buttonF">Click here to view next day</button>
         </div> 
 </a> 
- 
+  {{today}} <br>
+ {{day_name}}
    <br> <br>
   <!-- //KANI WALAPA -->
 
