--- a/templates/student/schedule.html
+++ b/templates/student/schedule.html
@@ -284,6 +284,7 @@ margin-right: auto;
   <div class="fac">
     <button type="submit" class="buttonF">Set Schedule</button>
   </div> 
+  diri dapat naay sentnece unsay purpose aning pag paset nimo sa schedule
 &nbsp;
 <form action="#" class="cleanForm" method="POST">
         <div class="facers">
