--- a/templates/student/student_home.html
+++ b/templates/student/student_home.html
@@ -617,6 +617,11 @@ th, td {
                               <span class="nav__name">View Schedule</span>
                               
                           </a>
+                           <a href="{% url 'student_history' %}" class="nav__link "> 
+                              <i class='bx bx-history nav__icon' ></i>
+                              <span class="nav__name">View History</span>
+                              
+                          </a>
                             
                         </div>
     
