--- a/templates/student/viewappointment.html
+++ b/templates/student/viewappointment.html
@@ -262,6 +262,7 @@ outline: none;
         </div> 
   
             <div class="table-cell">
+              naka sentence ni diri
       <p class="modal2"> &nbsp; &nbsp; {{object.date}}</p> 
       <p class="modal2"> &nbsp; &nbsp; {{object.reasons}}</p>
       <p class="modal2"> &nbsp; &nbsp; {{object.start_time}} - {{object.end_time}}</p>
