--- a/templates/teacher/detailNotif.html
+++ b/templates/teacher/detailNotif.html
@@ -221,7 +221,7 @@ outline: none;
       <p class="modal1"><b>Subject:</b> &nbsp; &nbsp;</p>
         </div> 
   
-            <div class="table-cell">
+            <div class="table-cell"> sentence ni diri nga part
       <p class="modal2"> &nbsp; &nbsp; {{object.feedback}}</p>
       <p class="modal2" > &nbsp; &nbsp; {{object.subject_referred}}</p> 
       </div> 
