--- a/templates/teacher/modal.html
+++ b/templates/teacher/modal.html
@@ -221,7 +221,7 @@ outline: none;
               <p class="modal1"><b>Student Number:</b> &nbsp;</p>
               <p class="modal1"><b>Subject:</b> &nbsp; &nbsp;</p>
               <p class="modal1"><b>Behavior Problem:</b> &nbsp; &nbsp;</p>   
-              <p class="modal1"><b>Reasons: </b>&nbsp; &nbsp;</p>  
+              <p class="modal1"><b>Additional Information: </b>&nbsp; &nbsp;</p>  
                 </div> 
           
                     <div class="table-cell">
