--- a/templates/teacher/new.html
+++ b/templates/teacher/new.html
@@ -419,7 +419,7 @@ margin: auto;
     
   &nbsp;    &nbsp;
   
-     <i><h4 style="margin-left: auto; font-size: large;" >Reasons&nbsp;for&nbsp;Referral:</h4> </i>
+     <i><h4 style="margin-left: auto; font-size: large;" >Input&nbsp;Additional&nbsp;Information:</h4> </i>
      {{form1.reasons}}
      <br> <br>
     <button class="buttons" style="font-weight: bold;  color: #454545;">Submit</button>
