--- a/templates/admin/uploaddb_counselor.html
+++ b/templates/admin/uploaddb_counselor.html
@@ -1,4 +1,4 @@
-{% extends "uploaddb/uploaddb_home.html" %}
+{% extends "admin/admin_home.html" %}
 {% block title %} Upload Counselor {% endblock %}
 {% block content %}
  
