--- a/templates/admin/uploaddb_schooloffices.html
+++ b/templates/admin/uploaddb_schooloffices.html
@@ -1,6 +1,7 @@
-{% extends "uploaddb/uploaddb_home.html" %}
-{% block title %} Upload Degree Program {% endblock %}
+{% extends "admin/admin_home.html" %}
+{% block title %} Upload School offices {% endblock %}
 {% block content %}
+ 
 <style>
 .faculty{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -75,7 +76,7 @@
 </style>
 <div class="faculty">
   <div class="fac">
-    <button type="submit" class="buttonF">Upload Degree Progran</button>
+    <button type="submit" class="buttonF">Upload School Offices</button>
   </div> 
 <br>
   <form method="post" enctype="multipart/form-data">
