--- a/templates/counselor/another_sched.html
+++ b/templates/counselor/another_sched.html
@@ -175,12 +175,15 @@ outline: none;
 
   </style>
   <br>
+
   <a style="color: #504A4B" 
   href="{% url 'counselor_view_another_sched' 1 %}"> 
            <div class="fac">
           <button type="submit" class="buttonF">Click here to view next day</button>
         </div> 
 </a> 
+ {{today}} <br>
+ {{day_name}}
 <br>
 
     <table class="table-fill">
