--- a/templates/student/notification.html
+++ b/templates/student/notification.html
@@ -193,11 +193,7 @@ outline: none;
     {% endif %}
 <br>
 <table id="customers">
-    <tr>
-    <th style="text-align:center; color: black;">Referral</th>
-    <th style="text-align:center; color: black;">Time</th>
- 
-  </tr>
+  
 
 {% for notification in notifications reversed %}
 
@@ -209,12 +205,14 @@ outline: none;
     <td> <a href="{% url 'student_notif_detail' notification.extra_id %}"><small>{{ notification.created_at|timesince }} ago</small>></a></td>
     
   </tr>
-   </a> {% elif notification.notification_type == 'manual_referral' %}
+   </a> {% else %}
 
 
   <tr>
-    <td><a style="color: black; font-size: 16px;" href="{% url 'student_notif_detail' notification.id %}"><strong>{{ notification.created_by.username }}</strong>  <b style="color: black;">Manual Referral</b></a></td>
-    <td><a style="color: black; font-size: 16px;" href="{% url 'student_notif_detail' notification.id %}">{{ notification.created_at|timesince }} ago</a></td>
+    <td><a style="color: black; font-size: 16px;" href="{% url 'student_notif_detail' notification.id %}"><strong></strong> 
+       <b style="color: black;">You have a Counseling Appointment on {{ notification.schedDay|date }}
+    </b></a></td>
+    <td><a style="color: black; font-size: 16px;" href="{% url 'student_notif_detail' notification.id %}">{{ notification.created_at|timesince }} ago</a></td> 
   </tr>
 
 
