--- a/templates/student/view_history.html
+++ b/templates/student/view_history.html
@@ -1,7 +1,6 @@
-{% extends "teacher/teacher_home.html" %}
-
+{% extends "student/student_home.html" %}
 {% block title %} 
- Faculty load
+Notifications
 {% endblock %} 
 {% block content %}
 <style>
@@ -21,6 +20,9 @@
       flex-wrap: row;
       margin-left: 140px;
       align-items: stretch;
+     
+      
+      
       
     }
 .txtFont{
@@ -46,7 +48,8 @@
 /* === TABLE ==== */
 .table-box
 {
-    margin: 50px auto;
+    margin: 15px auto;
+    
 }
 
 .table-row{
@@ -73,6 +76,7 @@
     line-height: 5px;
     box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
     justify-content: left;
+    margin: auto;
  
 }
 .table-head .table-cell{
@@ -81,12 +85,10 @@
 .table-cell{
     display: table-cell;
     width: 3.33%;
-
+    text-align: center;
     padding: 4px 0;
-    /* border-right: 1px solid #d8c090; */
-     border-collapse: collapse;
+    border-right: 1px solid #d8c090;
     vertical-align: middle;
- 
     
 }
 .first-cell{
@@ -98,7 +100,6 @@
 .last-cell{
     border-right: none;
     width: 10%;
-    margin-left: auto;
 }
 /* a{
     text-decoration: none;
@@ -127,25 +128,17 @@ p{
     color: #d8c090;
     font-size: 15px;
     box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    line-height: 10px;
-}
-.table-box
-{
-    margin: 16px auto;
-    
+    line-height: 5px;
 }
     #customers {
       font-family: Arial, Helvetica, sans-serif;
       border-collapse: collapse;
       width: 97%;
-      margin:auto;
-      
-      
     }
     
     #customers td, #customers th {
       border: 1px solid #ddd;
-      padding: 20px;
+      padding: 10px;
     }
     
     #customers tr:nth-child(even){background-color: #f2f2f2;}
@@ -189,47 +182,25 @@ outline: none;
 
 
         <div class="fac">
-          <button type="submit" class="buttonF">Notifications</button>
+          <button type="submit" class="buttonF">History</button>
         </div> 
-
 <br>
+<table id="customers">
+  <tr>
+  <th style="text-align:center; color: black;">Counselor's Name</th>
+  <th style="text-align:center; color: black;">Date</th>
+  <th style="text-align:center; color: black;">Time</th>
 
-    {% if not notifications %}
-        <h4>No Notifications Yet!</h4>
-    {% endif %}
+</tr>
 
-    <table id="customers">
-    
-    
-    {% for notification in notifications reversed %}
-    
-    {% if notification.notification_type == 'automatic_referral' %}
-    <a href="#">
-    <tr>
-      
-      <td>  <a href="#"><strong>{{ notification.created_by}}</strong> <b>Automatic Referral</b></td></a>
-      <td> <a href="#"><small>{{ notification.created_at|timesince }} ago</small>></a></td>
-      
-    </tr>
-     </a> {% else %}
-    
-    
-    <tr>
-      <td><a style="color: black;" href="{% url 'teacher_view_notif_detail' notification.id %}">
-        <b style="color: black;">Your Referred Student Has Been Assessed </b></a></td>
-      <td><a style="color: black;" href="{% url 'teacher_view_notif_detail' notification.id %}">{{ notification.created_at|timesince }} ago</a></td>
-    </tr>
-    
-    
-    {% endif %}  
-    {% endfor %}
-    </table>
+{% for obj in object reversed %}
 
-
+<tr>
+  <td>{{counselor.firstname}} {{counselor.lastname}}</td>
+  <td> {{obj.date}}</td>
+  <td>{{obj.start_time}} - {{obj.end_time}}</td>
  
-   
+</tr>
+{% endfor %}
+</table>
 {% endblock %}
-
-
-
-<!-- MAO JUD NI FINAAAAAAAAAAAAAL -->
